Fixed animation not working on ios, made some design fixes

--- a/src/global.scss
+++ b/src/global.scss
@@ -17,13 +17,3 @@
     color: red;
     font-size: 12px;
 }
-
-.yellow-box-black-border {
-    border: 1px dashed #333;
-}
-
-.toast-container {
-    color:rgb(52, 155, 20);
-    text-align: center;
-    font-size: 4vmin;
-}
