--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -76,5 +76,5 @@
   --ion-color-light-tint: #f5f6f9;
 
   /** custom colors **/
-  --ion-background-color: rgb(239,239,244);
+  --ion-background-color: rgb(238, 238, 238);
 }
